Fix combo-box not working without `border-width` and add support for `popoverInlineAlign` property (#341)
* Fix combo-box not working without border-width

* Add support for popoverInlineAlign property

* Update combo-box.showcase.tsx

--- a/src/components/combobox/combo-box.scss
+++ b/src/components/combobox/combo-box.scss
@@ -95,10 +95,10 @@
    */
   --ch-combo-box-separation-y: var(--ch-combo-box-separation);
 
-  --ch-combo-box-mask-inline-start-width: 0px;
-  --ch-combo-box-mask-inline-end-width: 0px;
-  --ch-combo-box-mask-block-start-width: 0px;
-  --ch-combo-box-mask-block-end-width: 0px;
+  --ch-combo-box-mask-inline-start: 0px;
+  --ch-combo-box-mask-inline-end: 0px;
+  --ch-combo-box-mask-block-start: 0px;
+  --ch-combo-box-mask-block-end: 0px;
 
   display: inline-grid;
   grid-template-columns: 1fr max-content;
